--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/aft_mobile_banking
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=nita11
+server.port=8081
 
 #configure JPA Hibernate DDL
 #DDL = Data Definition Language
